Fixes of tests II